pgrx-tests/tests/compile-fail/invalid_pgcast_options.stderr
error: custom attribute panicked
 --> tests/compile-fail/invalid_pgcast_options.rs:3:1
  |
3 | #[pg_cast(invalid_opt)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Unrecognized pg_cast option: invalid_opt.
